--- a/react_portfolio_v1/package.json
+++ b/react_portfolio_v1/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react_portfolio_v1",
+  "homepage": "https://rginsberg549.github.io/react-portfolio-v1/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
